# rust-optee-dragonfly

./: .gitignore  uuid.txt
host/: Cargo.toml  Makefile
host/src/: ca_session.rs  lib.rs  main.rs  session_example.rs
proto/src/: lib.rs
ta/: Cargo.toml  build.rs
ta/src/: main.rs
ta/src/modular/: crypt_op.rs  dh_groups.rs  dragonfly_ffc.rs  dragonfly_op.rs  ffc_op.rs  gp_bigint.rs  mod.rs  object.rs  password.rs  sae_op.rs  test.rs
